--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
             >Web<span class="logo-studio">Studio</span>
           </a>
           <ul class="list-container">
-            <li><a class="link" href="./index.html">Studio</a></li>
-            <li><a class="link" href="">Portfolio</a></li>
-            <li><a class="link" href="">Contacts</a></li>
+            <li class="list-one">
+              <a class="link" href="./index.html">Studio</a>
+            </li>
+            <li class="list-two"><a class="link" href="">Portfolio</a></li>
+            <li class="list-three"><a class="link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
           <ul class="address-container">
-            <li>
+            <li class="address-one">
               <a class="address-list" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li>
+            </li class="address-two">
             <li>
               <a class="address-list" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
