--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <a class="address-list" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li class="address-two">
-            <li>
+            </li>
+            <li class="address-two">
               <a class="address-list" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
