--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <li class="list-one">
               <a class="link" href="./index.html">Studio</a>
             </li>
-            <li class="list-two"><a class="link" href="">Portfolio</a></li>
-            <li class="list-three"><a class="link" href="">Contacts</a></li>
+            <li class="list-one"><a class="link" href="">Portfolio</a></li>
+            <li class="list-one"><a class="link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
